--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "node build/index.js",
+    "start": "node --files build/index.js",
     "dev": "ts-node-dev src/index.ts",
     "build": "ts-node-dev src/index.ts && npm run build"
   },
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mercadopago": "^1.5.8",
+    "@types/mongoose": "^5.11.97",
     "@types/validator": "^13.7.14",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "mongoose": "^7.0.1",
     "validator": "^13.9.0"
