--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,14 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mercadopago": "^1.5.8",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.14",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
   }
 }
