--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -100,5 +100,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "files": ["./src/types/index.d.ts"]
+  "files": ["./src/types/index.d.ts"],
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ]
 }
